[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "cht_sfincs"
authors = [
    {name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares-usa.us"},
]
requires-python = ">=3.10"
dependencies = [ "numpy",
                 "xarray",
				 "affine",
				 "matplotlib",
				 "rioxarray",
				 "pandas",
				 "datashader",
				 "shapely",
				 "scipy",
				 "geopandas",
				 "pyproj",
				 "xugrid",
				 "tabulate",
				 "xmipy",
				 "contextily",
                 "cht_bathymetry@ git+https://github.com/deltares-research/cht_bathymetry.git",
                 "cht_utils@ git+https://github.com/deltares-research/cht_utils.git",
                 "cht_tide@ git+https://github.com/deltares-research/cht_tide.git",
                 "cht_tiling@ git+https://github.com/deltares-research/cht_tiling.git",
                 "cht_physics@ git+https://github.com/deltares-research/cht_physics.git",
				]
